objects/ServiceTerritoryMember.object
<CustomObject>
    <fields>
        <fullName>FSL__Internal_SLR_HomeAddress_Geolocation__c</fullName>
        <label>Internal SLR HomeAddress Geolocation</label>
        <scale>6</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>MR_DT_Overlap__c</fullName>
        <description>RA means at least 1 RA exists for this Resource in the selected date range
SA means at least 1 SA exists for this Resource in the selected date range
Both means at least 1 RA and 1 SA exists for this Resource in the selected date range
Blank means no overlap exists</description>
        <inlineHelpText>RA means at least 1 RA exists for this Resource in the selected date range
SA means at least 1 SA exists for this Resource in the selected date range
Both means at least 1 RA and 1 SA exists for this Resource in the selected date range
Blank means no overlap exists</inlineHelpText>
        <label>Appointment Conflict</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RA</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MR_Resource_Name__c</fullName>
        <description>This formula field is used to display the technician name when running the SA creation process</description>
        <formula>ServiceResource.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Resource Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MR_Service_Territory__c</fullName>
        <description>This formula field is used to display the territory name when creating new service appointments.</description>
        <formula>ServiceTerritory.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Service Territory</label>
        <type>Text</type>
    </fields>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>FSL_Address_Check</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(City) &amp;&amp; ISBLANK(Street) &amp;&amp; NOT(ISBLANK(Country)) &amp;&amp; ISBLANK(PostalCode) &amp;&amp; ISBLANK(State)</errorConditionFormula>
        <errorDisplayField>Street</errorDisplayField>
        <errorMessage>Please populate the complete technician address to save the record or ensure the country is set as &quot;None&quot;</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Limit_STM_End_Date</fullName>
        <active>false</active>
        <errorConditionFormula>AND( NOT(ISBLANK(EffectiveEndDate)),
                                EffectiveEndDate &gt; ADDMONTHS(NOW(),36) )</errorConditionFormula>
        <errorMessage>End Date must be within 3 years from today</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>FSL__Secondary_STM</fullName>
        <active>true</active>
        <errorConditionFormula>(ISPICKVAL(TerritoryType, &quot;Secondary&quot;) &amp;&amp; 
    ( ( ( ISCHANGED(Longitude) || ISCHANGED(Latitude) ) &amp;&amp; ( (NOT(ISBLANK(Longitude))) || (NOT(ISBLANK(Latitude))) )) || 
      (NOT(ISBLANK(FSL__Internal_SLR_HomeAddress_Geolocation__Latitude__s))) || 
      (NOT(ISBLANK(FSL__Internal_SLR_HomeAddress_Geolocation__Longitude__s))) || 
      (NOT(ISBLANK( Street ))) || 
      (NOT(ISBLANK( City ))) ||
      (NOT(ISBLANK( Country ))) ||
      (NOT(ISBLANK( State ))) || 
      (NOT(ISBLANK(  PostalCode  )))
    )
 )</errorConditionFormula>
        <errorMessage>Cannot save Service Territory Member of type secondary with Operating Hours or Address</errorMessage>
    </validationRules>
</CustomObject>